@@ -63,6 +63,7 @@ public class TikaEntityProcessor extends EntityProcessorBase {
   private static final Logger LOG = LoggerFactory.getLogger(TikaEntityProcessor.class);
   private String format = "text";
   private boolean done = false;
+  private boolean extractEmbedded = false;
   private String parser;
   static final String AUTO_PARSER = "org.apache.tika.parser.AutoDetectParser";
   private String htmlMapper;
@@ -92,6 +93,10 @@ public class TikaEntityProcessor extends EntityProcessorBase {
       wrapAndThrow (SEVERE, e,"Unable to load Tika Config");
     }
 
+    String extractEmbeddedString = context.getResolvedEntityAttribute("extractEmbedded");
+    if ("true".equals(extractEmbeddedString)) {
+      extractEmbedded = true;
+    }
     format = context.getResolvedEntityAttribute("format");
     if(format == null)
       format = "text";
@@ -142,6 +147,9 @@ public class TikaEntityProcessor extends EntityProcessorBase {
         ParseContext context = new ParseContext();
         if ("identity".equals(htmlMapper)){
           context.set(HtmlMapper.class, IdentityHtmlMapper.INSTANCE);
+        }
+        if (extractEmbedded) {
+          context.set(Parser.class, tikaParser);
         }
         tikaParser.parse(is, contentHandler, metadata , context);
     } catch (Exception e) {
